# libusbNativeAndroidTest

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libusb_utils.h  main.cpp
app/src/main/res/values/: strings.xml
